--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
-<h2>test
-
-</h2>
-
-<!-- <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a person"  >
-  <nz-option nzLabel="Jack" nzValue="jack"></nz-option>
-  <nz-option nzLabel="Lucy" nzValue="lucy"></nz-option>
-  <nz-option nzLabel="Tom" nzValue="tom"></nz-option>
-</nz-select> -->
+<!--  
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -14,6 +6,7 @@
       <button (click)="changeForm('last')">last</button>
       <button (click)="getValue()">value</button>
       <button (click)="addNew()">addNew</button>
+      <button routerLink="multiple-form">go to form</button>
     
       <nz-select ngModel="lucy">
         <nz-option nzValue="jack" nzLabel="Jack"></nz-option>
@@ -38,4 +31,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<app-multiple-form></app-multiple-form>
